# PhotoBooth

./: DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT_CHECKLIST.md  pyrightconfig.json  test-api.js  test-vercel-api.js  test_debug_endpoint.py  vercel.json
api/: basic.py  main.py  minimal.py  requirements-minimal.txt  requirements.txt  simple.py  test.py
backend/: pyproject.toml  pyrightconfig.json
backend/app/: main.py  main.py.backup
frontend/: index.html  vite.config.ts
frontend/public/frames/: README.md
frontend/src/: App.css  App.tsx
frontend/src/components/: Camera.tsx  Compose.tsx  Edit.tsx  Home.tsx  index.ts
frontend/src/constants/: styles.ts
frontend/src/hooks/: index.ts  useCamera.ts  usePhotoCapture.ts
frontend/src/types/: index.ts
